@@ -1,3 +1,8 @@
+2007-10-03  John W. Eaton  <jwe@octave.org>
+
+	* miscellaneous/dir.m: Create empty struct with field names.
+	Include datenum in struct.
+	
 2007-10-02  David Bateman  <dbateman@free.fr>
 
 	* miscellaneous/ls.m: If nargout return string array of files
